--- a/static/sass/blocks/index/icatalog.sass
+++ b/static/sass/blocks/index/icatalog.sass
@@ -102,6 +102,7 @@
 		.swiper-container
 			max-width: 1012px
 			margin-right: 0
+			width: 100%
 
 			@include desktop
 				max-width: 866px
@@ -240,6 +241,7 @@
 		right: 0
 
 	&__slider-name
+		width: 100%
 		max-height: 155px
 		overflow: hidden
 		span
