--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -4507,7 +4507,108 @@ h1 {
       display: none; }
     .projects__map [class*="balloon__close"] {
       display: none; }
-    @media (min-width: 640px) {
+
+.partners {
+  overflow: hidden; }
+  .partners .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start; }
+  .partners__text {
+    position: relative;
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 65px 0;
+    margin-bottom: 100px; }
+    .partners__text:before {
+      content: '';
+      position: absolute;
+      left: 50%;
+      top: 0;
+      width: 100vw;
+      height: 100%;
+      background-color: #fcfcfc;
+      -webkit-transform: translateX(-50%);
+              transform: translateX(-50%);
+      z-index: -1; }
+  .partners__items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+  .partners__item {
+    position: relative;
+    width: calc(100% / 3 - 24px);
+    margin-right: 36px;
+    margin-bottom: 74px; }
+    .partners__item:nth-child(3n+3) {
+      margin-right: 0; }
+    .partners__item:hover .partners__preview:before {
+      height: 100%; }
+  .partners__link {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1; }
+  .partners__preview {
+    border: 1px solid #f1f1f1;
+    background-color: transparent;
+    overflow: hidden;
+    font-size: 0;
+    line-height: 0;
+    height: 266px;
+    width: 100%;
+    position: relative; }
+    .partners__preview:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 0;
+      -webkit-transition: .8s height;
+      transition: .8s height;
+      background-color: #fcfcfc; }
+  .partners__img {
+    position: absolute;
+    max-width: 92%;
+    max-height: 90%;
+    left: 50%;
+    top: 50%;
+    -webkit-transition: .5s transform;
+    transition: .5s transform;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
+  .partners__info {
+    padding: 20px 0; }
+  .partners__site {
+    line-height: 18px;
+    font-size: 14px;
+    color: #000000;
+    margin-bottom: 12px;
+    display: inline-block; }
+  .partners__name {
+    line-height: 26px;
+    font-size: 22px;
+    color: #000000;
+    font-weight: 500; }
+  .partners__btn {
+    width: 326px;
+    -ms-flex-item-align: center;
+        align-self: center;
+    margin-top: -29px;
+    margin-bottom: 6px; }
+  @media (min-width: 640px) {
   .choices__list--dropdown .choices__item--selectable:after {
     content: attr(data-select-text);
     font-size: 12px;
@@ -4524,17 +4625,17 @@ h1 {
   [dir="rtl"] .choices__list--dropdown .choices__item--selectable:after {
     right: auto;
     left: 10px; } }
-    @media (min-width: 768px) and (max-width: 1170px) {
+  @media (min-width: 768px) and (max-width: 1170px) {
       .icatalog__slide:nth-of-type(2):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(3):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(6):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(7):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(10):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(11):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(14):not(.icatalog__slide--empty), .icatalog__slide:nth-of-type(15):not(.icatalog__slide--empty) {
         background-color: #013b83 !important; } }
-    @media (min-width: 1025px) {
+  @media (min-width: 1025px) {
   .lg-outer .lg-thumb-item {
     -webkit-transition: border-color 0.25s ease;
     transition: border-color 0.25s ease; } }
-    @media (min-width: 1171px) {
+  @media (min-width: 1171px) {
       .icatalog__slide:nth-child(2n+2):not(.icatalog__slide--empty) {
         background-color: #013b83; } }
-    @media only screen and (max-width: 1500px) {
+  @media only screen and (max-width: 1500px) {
     h1 {
       font-size: 56px;
       line-height: 60px; }
@@ -4865,16 +4966,26 @@ h1 {
         max-width: 960px; }
       .projects__map {
         left: calc(-1*(100vw - 100%)/2);
-        height: 450px; } }
-    @media only screen and (max-width: 1340px) {
+        height: 450px; }
+      .partners__text {
+        max-width: 960px; }
+      .partners__preview {
+        height: 240px; }
+      .partners__site {
+        line-height: 17px;
+        font-size: 13px; }
+      .partners__name {
+        line-height: 24px;
+        font-size: 20px; } }
+  @media only screen and (max-width: 1340px) {
       .products__item:hover .products__over-img {
         width: calc(100% + 200px);
         height: calc(100% + 124px); } }
-    @media only screen and (max-width: 1290px) {
+  @media only screen and (max-width: 1290px) {
       .products__item:hover .products__over-img {
         width: calc(100% + 130px);
         height: calc(100% + 60px); } }
-    @media only screen and (max-width: 1170px) {
+  @media only screen and (max-width: 1170px) {
     .nav__item {
       margin-right: 10px; }
     .nav__link {
@@ -4952,8 +5063,14 @@ h1 {
         .certificates__item:nth-child(3n+3) {
           margin-right: 36px; }
         .certificates__item:nth-child(even) {
+          margin-right: 0; }
+      .partners__item {
+        width: calc(100% / 2 - 18px); }
+        .partners__item:nth-child(3n+3) {
+          margin-right: 36px; }
+        .partners__item:nth-child(even) {
           margin-right: 0; } }
-    @media only screen and (max-width: 1023px) {
+  @media only screen and (max-width: 1023px) {
   .logo {
     margin-right: auto; }
     .logo__img {
@@ -5138,8 +5255,10 @@ h1 {
       .news__btn {
         width: 250px; }
       .projects__btn {
+        width: 250px; }
+      .partners__btn {
         width: 250px; } }
-    @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 900px) {
   .developers__href {
     padding-left: 85px; }
   .developers__dextra {
@@ -5156,7 +5275,7 @@ h1 {
         margin-right: 0; }
         .prod-card__column:last-child {
           margin-bottom: 40px; } }
-    @media only screen and (max-width: 767px) {
+  @media only screen and (max-width: 767px) {
     .wrapper {
       padding: 0 15px; }
       .header__bottom {
@@ -5262,8 +5381,13 @@ h1 {
               columns: 1; }
       .certificates__item {
         width: 100%;
-        margin-right: 0 !important; } }
-    @media only screen and (max-width: 520px) {
+        margin-right: 0 !important; }
+      .partners__item {
+        width: 100%;
+        margin-right: 0 !important; }
+        .partners__item:last-child {
+          margin-bottom: 0; } }
+  @media only screen and (max-width: 520px) {
       .inews__header {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
@@ -5274,7 +5398,7 @@ h1 {
                 align-items: flex-start; }
       .inews__title {
         margin-bottom: 10px; } }
-    @media only screen and (max-width: 500px) {
+  @media only screen and (max-width: 500px) {
     h1 {
       font-size: 26px;
       line-height: 28px; }
@@ -5300,10 +5424,10 @@ h1 {
     .thanks-popup h2 {
       font-size: 26px;
       line-height: 28px; } }
-    @media only screen and (max-width: 420px) {
+  @media only screen and (max-width: 420px) {
       .header__tel {
         display: none; } }
-    @media (max-width: 395px) {
+  @media (max-width: 395px) {
       .footer__nav-list {
         -webkit-columns: 1;
            -moz-columns: 1;
