--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -4559,7 +4559,9 @@ h1 {
     top: 0;
     bottom: 0;
     right: 0;
-    z-index: 1; }
+    z-index: 1;
+    font-size: 0;
+    line-height: 0; }
   .partners__preview {
     border: 1px solid #f1f1f1;
     background-color: transparent;
