--- a/static/pug/partners.pug
+++ b/static/pug/partners.pug
@@ -20,63 +20,63 @@ html(lang="ru")
 					.partners
 						.partners__items
 							.partners__item
-								a(href="https://www.hoppecke.com/", target="_blank").partners__link
+								a(href="https://www.hoppecke.com/", target="_blank").partners__link https://www.hoppecke.com/
 								.partners__preview
 									img(src="/img/partners/img-1.png", alt="").partners__img
 								.partners__info
 									span.partners__site https://www.hoppecke.com/
 									p.partners__name Hoppecke Batterien
 							.partners__item
-								a(href="https://www.salicru.com/", target="_blank").partners__link
+								a(href="https://www.salicru.com/", target="_blank").partners__link https://www.salicru.com/
 								.partners__preview
 									img(src="/img/partners/img-2.png", alt="").partners__img
 								.partners__info
 									span.partners__site https://www.salicru.com/
 									p.partners__name SALICRU, S.A.
 							.partners__item
-								a(href="http://www.gazprom.ru/", target="_blank").partners__link
+								a(href="http://www.gazprom.ru/", target="_blank").partners__link http://www.gazprom.ru/
 								.partners__preview
 									img(src="/img/partners/img-3.png", alt="").partners__img
 								.partners__info
 									span.partners__site http://www.gazprom.ru/
 									p.partners__name ПАО «Газпром»
 							.partners__item
-								a(href="https://www.tplusgroup.ru/", target="_blank").partners__link
+								a(href="https://www.tplusgroup.ru/", target="_blank").partners__link https://www.tplusgroup.ru/
 								.partners__preview
 									img(src="/img/partners/img-4.png", alt="").partners__img
 								.partners__info
 									span.partners__site https://www.tplusgroup.ru/
 									p.partners__name ООО "КЭС-Холдинг" - ПАО «Т Плюс»
 							.partners__item
-								a(href="http://www.rosseti.ru/", target="_blank").partners__link
+								a(href="http://www.rosseti.ru/", target="_blank").partners__link http://www.rosseti.ru/
 								.partners__preview
 									img(src="/img/partners/img-5.png", alt="").partners__img
 								.partners__info
 									span.partners__site http://www.rosseti.ru/
 									p.partners__name Холдинг МРСК - ПАО "Россети"
 							.partners__item
-								a(href="http://www.novatek.ru/", target="_blank").partners__link
+								a(href="http://www.novatek.ru/", target="_blank").partners__link http://www.novatek.ru/
 								.partners__preview
 									img(src="/img/partners/img-6.png", alt="").partners__img
 								.partners__info
 									span.partners__site http://www.novatek.ru/
 									p.partners__name ПАО «НОВАТЭК»
 							.partners__item
-								a(href="https://www.rosneft.ru/", target="_blank").partners__link
+								a(href="https://www.rosneft.ru/", target="_blank").partners__link https://www.rosneft.ru/
 								.partners__preview
 									img(src="/img/partners/img-7.png", alt="").partners__img
 								.partners__info
 									span.partners__site https://www.rosneft.ru/
 									p.partners__name Роснефть
 							.partners__item
-								a(href="https://ekt.rt.ru/", target="_blank").partners__link
+								a(href="https://ekt.rt.ru/", target="_blank").partners__link https://ekt.rt.ru/
 								.partners__preview
 									img(src="/img/partners/img-8.png", alt="").partners__img
 								.partners__info
 									span.partners__site https://ekt.rt.ru/
 									p.partners__name ПАО «Ростелеком»
 							.partners__item
-								a(href="https://www.ugmk.com/", target="_blank").partners__link
+								a(href="https://www.ugmk.com/", target="_blank").partners__link https://www.ugmk.com/
 								.partners__preview
 									img(src="/img/partners/img-9.png", alt="").partners__img
 								.partners__info
