--- a/static/sass/blocks/standart/default.sass
+++ b/static/sass/blocks/standart/default.sass
@@ -313,6 +313,7 @@
 				td
 					font-size: 14px
 					line-height: 20px
+					padding: 15px
 
 @media only screen and (max-width:500px)
 	.wis-content
