--- a/static/sass/blocks/standart/subnav.sass
+++ b/static/sass/blocks/standart/subnav.sass
@@ -1,13 +1,15 @@
 .subnav
 	display: flex
-	margin-bottom: 56px
+	margin-bottom: 50px
+	flex-wrap: wrap
+	justify-content: center
 
 	@include pad
 		flex-direction: column
 		text-align: center
 
 	&__item
-		margin: 0 12px
+		margin: 0 12px 6px
 
 		@include pad
 			margin-bottom: 10px
