--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -3074,9 +3074,14 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 56px; }
+  margin-bottom: 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .subnav__item {
-    margin: 0 12px; }
+    margin: 0 12px 6px; }
     .subnav__item.active .subnav__link {
       color: #000000;
       border-color: transparent; }
