--- a/static/sass/blocks/partners/partners.sass
+++ b/static/sass/blocks/partners/partners.sass
@@ -47,9 +47,11 @@
 
 		@include sdesktop
 			width: calc(100% / 2 - 18px)
+			margin-bottom: 32px
+			margin-right: 32px
 
 			&:nth-child(3n+3)
-				margin-right: 36px
+				margin-right: 32px
 			
 			&:nth-child(even)
 				margin-right: 0
