--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -103,7 +103,7 @@
 			line-height: 26px
 			font-weight: 500
 			color: $main-blue
-			border-bottom: 1px solid $border-bottom
+			border-bottom: 1px dotted $border-bottom
 			transition: .5s border-color
 
 			@include desktop
