--- a/static/sass/blocks/standart/default.sass
+++ b/static/sass/blocks/standart/default.sass
@@ -317,6 +317,9 @@
 
 @media only screen and (max-width:500px)
 	.wis-content
+		.wrapper
+			padding: 0
+
 		h1
 			font-size: 26px
 			line-height: 28px
