--- a/static/sass/blocks/index/hero.sass
+++ b/static/sass/blocks/index/hero.sass
@@ -27,17 +27,18 @@
 	&__title
 		font-size: 72px
 		line-height: 76px
-		max-width: 750px
+		max-width: 60%
 		font-weight: bold
 		color: $white
 
 		@include desktop
 			font-size: 56px
 			line-height: 60px
-		
+
 		@include mob
 			font-size: 29px
 			line-height: 35px
+			max-width: inherit
 
 	.swiper-buttons
 		display: flex
@@ -75,9 +76,14 @@
 			background-size: 39px 26px
 			width: 39px
 			height: 26px
+		
+		@include mob
+			&:hover
+				transform: rotate(180deg) translateX(0)
 
 		&:hover
 			transform: rotate(180deg) translateX(15px)
+
 
 	.swiper-button-next
 		position: static
@@ -95,5 +101,10 @@
 			width: 39px
 			height: 26px
 
+		@include mob
+			&:hover
+				transform: translateX(0)
+
 		&:hover
 			transform: translateX(15px)
+
