--- a/static/sass/blocks/prod-card/prod-card.sass
+++ b/static/sass/blocks/prod-card/prod-card.sass
@@ -90,7 +90,8 @@
 			padding-top: 0
 
 	&__img
-			max-width: 100%
+			max-height: 90%
+			max-width: 90%
 			position: absolute
 			left: 50%
 			top: 50%
