--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -15,8 +15,6 @@
 			top: 0
 			right: 0
 			bottom: 0
-			// padding: 60px 20px
-			// padding-bottom: 100px
 			padding: 0 20px
 			width: 100vw
 			height: 100vh
@@ -94,11 +92,10 @@
 			&:before
 				content: ''
 				position: absolute
-				left: 50%
-				top: 50%
+				left: calc(50% - 6.5px)
+				top: calc(50% - 6.5px)
 				width: 13px
 				height: 13px
-				transform: translate(-50%, -50%)
 				background-size: 13px 13px
 				background-repeat: no-repeat
 				background-position: center
@@ -115,11 +112,10 @@
 			&:before
 				content: ''
 				position: absolute
-				left: 50%
-				top: 50%
+				left: calc(50% - 7px)
+				top: calc(50% - 7px)
 				width: 14px
 				height: 14px
-				transform: translate(-50%, -50%)
 				background-repeat: no-repeat
 				background-position: center
 				background-size: 14px 14px
@@ -266,12 +262,17 @@
 			border-radius: 0
 
 			@include mob
-				margin-left: -10px
+				margin-left: 0;
+				left: 50%;
+				transform: translateX(-50%);
 
 			.choices__list
 				padding: 30px 20px
 			
 			.choices__item--selectable.is-highlighted
+				background-color: $t
+
+			.choices__item--selectable:hover
 				background-color: $t
 				opacity: .5
 
