--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -32,6 +32,7 @@ body
 			.choices__list--single
 				.choices__item
 					color: $black
+					border-color:  rgba(0, 0, 0, 0.25)
 			
 			.choices[data-type*="select-one"]:after
 				width: 6px
