--- a/static/sass/blocks/products/products.sass
+++ b/static/sass/blocks/products/products.sass
@@ -54,6 +54,10 @@
 				bottom: 0
 				left: auto
 				right: 0
+		
+		&:nth-child(even)
+			.products__hover-img
+				transform: scale(-1, 1)
 
 		&:hover
 			.products__name
