--- a/static/sass/blocks/prod-category/prod-category.sass
+++ b/static/sass/blocks/prod-category/prod-category.sass
@@ -92,3 +92,8 @@
 			@include desktop
 				font-size: 18px
 				line-height: 22px
+
+	&.wis-content
+		.breadcrumbs + h1
+			text-align: center
+			width: 100%
