--- a/static/sass/blocks/standart/default.sass
+++ b/static/sass/blocks/standart/default.sass
@@ -316,9 +316,12 @@
 					padding: 15px
 
 @media only screen and (max-width:500px)
-	.wis-content
+	.wrapper
 		.wrapper
 			padding: 0
+	.wis-content
+		.wrapper
+			//padding: 0
 
 		h1
 			font-size: 26px
