--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -22,6 +22,7 @@
 			overflow-x: hidden
 			background-color: $main-blue
 			flex-direction: column
+			z-index: 1
 
 		&-container
 			padding: 0 33px
